front-envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service1 }
              - match: { prefix: "/" }
                route: { cluster: service2 }
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: service1
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: service1, port_value: 80 }}]
  - name: service2
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: service2, port_value: 80 }}]

admin:
  access_log_path: /tmp/admin_access.log
  address: { socket_address: { address: "0.0.0.0", port_value: 8001 } }
